CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.19

	- The lp command now supports a "-H restart" option to
	  restart previously printed jobs.  This functionality
	  only works if you have enabled the PreserveJobFiles
	  option.
	- The scheduler now supports URIs in HTTP request lines
	  to conform to the HTTP/1.1 specification.
	- The time-at-xyz attributes were not recognized in
	  banner files if prefixed by a question mark, e.g.
	  "{?time-at-creation}".
	- Added support for pre-filtering application/pictwps
	  files on MacOS clients before sending them to a server
	  via IPP.
	- The scheduler now allows file:/dev/null device URIs
	  even if FileDevices is set to No.
	- CUPS uses strerror() for hostname resolution errors,
	  when it should have used hstrerror().
	- The USB backend no longer tries to guess the serial
	  number of a device from the USB devices file; this
	  means that printers that don't report their serial
	  numbers in the device ID string will not be
	  individually selectable.
	- The pstops filter didn't handle page ranges properly
	  when a page contained an embedded document.
	- Added a translation of the web interface to German.
	- When printing using the OutputOrder=Reverse option
	  with duplexing, the output order is now truly
	  reversed; the order of sub-pages when printing N-up is
	  the same.
	- The pstops filter did not always output the extra
	  blank page when printing a document with an odd number
	  of pages with duplexing enabled.
	- The ippAddXYZ functions no longer allow the
	  application to add less than 1 value.
	- Fixed a URL rewrite bug in the web interface - local
	  access was sometimes redirected away from localhost...
	- The ppdOpen() functions could get in an infinite loop
	  if the PPD file contained a keyword or text that was
	  too large for the buffer.
	- Added preliminary support for GNU TLS; patch provided
	  by Jeff Licquia.
	- Now timeout IPP attribute reads after 1 second inside